<resources>
    <string name="app_name">Find Home</string>

<!--    text Dialog Register -->
    <string name="title_register_successfull">Đăng ký thành công!</string>
    <string name="title_register_failed">Đăng ký thất bại!</string>
    <string name="message_register_successfull">Bạn có muốn trở về màn hình Đăng nhập?</string>
    <string name="message_register_failed">Bạn nên thử lại với email mới!</string>

    <string name="message_exit_app">Bạn muốn thoát ứng dụng?</string>

    <!--    text Title Fragment -->
    <string name="room_available">Phòng Trống</string>
    <string name="room_renting">Phòng Đang Thuê</string>
    <string name="room_add">Thêm Phòng</string>

    <string name="msg_error_not_connect_to_internet">Please check your network connection</string>
    <string name="tvStatus1">Phòng đang trống</string>
    <string name="tvStatus2">Đã cho thuê</string>
    <string name="Logout">Logout</string>
    <string name="login">Đã có tài khoản?</string>
    <string name="register">Chưa có tài khoản?</string>

    <!--  text hint editText   -->
    <string name="hint_username">Tài khoản</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_repassword">Nhập lại mật khẩu</string>
    <string name="hint_title">Tiêu đề phòng</string>
    <string name="hint_price">Giá phòng</string>
    <string name="hint_address">Địa chỉ</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_description">Mô tả</string>

    <!--  text  Button  -->
    <string name="btnLogin">Đăng nhập</string>
    <string name="btnRegister">Đăng ký</string>

</resources>