<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo_findhome"/>

    <!--Text input username-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_username"
            />
    </com.google.android.material.textfield.TextInputLayout>

<!--Text input password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="5dp"

        android:layout_width="350dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/text_input_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Text input repassword-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="5dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_repassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/text_input_repassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:textStyle="italic"
        android:layout_marginStart="115dp"
        android:id="@+id/tv_Login"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Login"
        android:text="@string/btnRegister"
        android:backgroundTint="@color/green"
        android:layout_marginTop="5dp"/>

</LinearLayout>